--- a/src/lib/MixmotionPlayer/mixmotion-player.scss
+++ b/src/lib/MixmotionPlayer/mixmotion-player.scss
@@ -1,3 +1,4 @@
+html,
 body {
   overflow: hidden;
   padding: 0;
@@ -25,6 +26,7 @@ body,
   .mixcloud-widget {
     top: unset;
     bottom: 0;
+    height: 60px;
     z-index: 2;
     transform: translateY(100px);
     opacity: 0;
